.editor-section padding from 10px to 7px, fix overflow

--- a/local-app/napkin-ui.css
+++ b/local-app/napkin-ui.css
@@ -74,7 +74,7 @@ body {
   margin:5px auto;
   width:98%;    
   overflow:auto;
-  padding:10px;
+  padding:7px;
 }
 
 /* UI controls. */
